tela motorista, caminhao, bairro implementada.

--- a/front/src/app/components/box-bairro/box-bairro.component.html
+++ b/front/src/app/components/box-bairro/box-bairro.component.html
@@ -3,7 +3,7 @@
         <h2>{{bairro?.nome}}</h2>
         <div class="box-btn">
             <button class="btn btn-editar" (click)="abrirModalEditarBairro(bairro!)">Editar</button>
-            <button class="btn btn-excluir">Excluir</button>
+            <!-- <button class="btn btn-excluir">Excluir</button> -->
             <button class="btn btn-novo-ponto" (click)="abrirModalNovoPonto()">Novo Ponto</button>
         </div>
     </div>
