--- a/front/src/app/components/box-bairro/box-bairro.component.scss
+++ b/front/src/app/components/box-bairro/box-bairro.component.scss
@@ -7,6 +7,7 @@
     background-color: $cinza-claro;
     border: 1px solid $cinza-borda;
     border-radius: 10px;
+    margin-bottom: 4dvh;
 
     .header{
         display: flex;
