--- a/front/src/app/components/novo-caminhao/novo-caminhao.component.scss
+++ b/front/src/app/components/novo-caminhao/novo-caminhao.component.scss
@@ -83,6 +83,35 @@
                 gap: 20px;
             }
 
+            label {
+                font-weight: 600;
+                font-size: 14px;
+                color: #444;
+            }
+
+            .box-check {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                padding: 10px 0;
+                cursor: pointer;
+                transition: 0.2s ease;
+
+            label {
+                display: flex;
+                align-items: center;
+                gap: 6px;
+                cursor: pointer;
+                font-size: 1em;
+            }
+
+            input[type="checkbox"] {
+                width: 20px;
+                height: 20px;
+                cursor: pointer;
+            }
+            }
+
             .actions {
                 display: flex;
                 justify-content: center;
