--- a/front/src/app/components/novo-ponto/novo-ponto.component.html
+++ b/front/src/app/components/novo-ponto/novo-ponto.component.html
@@ -40,11 +40,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="form-group" *ngFor="let residuo of residuosDisponivel; let i = index">
-                    <input type="checkbox" [formControlName]="i" [id]="'residuo-' + i"/>
-                    <label class="form-check-label" [for]="'residuo-' + i">
-                        {{ residuo.nome }}
-                    </label>
+                <label>SERVIÇOS ADICIONAIS:</label>
+                <div class="box-check" formArrayName="tiposResiduoIds" *ngIf="form.get('tiposResiduoIds')">
+                    <div *ngFor="let residuo of residuosDisponivel; let i = index">
+                        <label>
+                            <input type="checkbox" [formControlName]="i">
+                            {{ residuo }}
+                        </label>
+                    </div>
                 </div>
             </div>
             <div class="actions">
