--- a/front/src/app/pages/bairro-ponto/bairro-ponto.page.scss
+++ b/front/src/app/pages/bairro-ponto/bairro-ponto.page.scss
@@ -65,6 +65,9 @@ main {
     .container{
         display: flex;
         justify-content: center;
-        width: 100%;
+    }
+    
+    .container app-box-bairro {
+        flex: 1;
     }
 }
