--- a/front/src/app/pages/caminhao/caminhao.page.html
+++ b/front/src/app/pages/caminhao/caminhao.page.html
@@ -20,20 +20,20 @@
             </thead>
             <tbody>
                 <tr *ngIf="listaCaminhao.length === 0">
-                    <td colspan="5" class="linha-vazia">Nenhum funcionário cadastrado.</td>
+                    <td colspan="7" class="linha-vazia">Nenhum funcionário cadastrado.</td>
                 </tr>
                 <tr *ngFor="let c of listaCaminhao; let i = index">
                     <td class="col-pos">{{i + 1}}</td>
                     <td class="col-placa">{{c.placa}}</td>
                     <td class="col-motorista">{{c.motorista.nome}}</td>
-                    <td class="col-capacidade">{{c.capacidade}} kg</td>
+                    <td class="col-capacidade">{{c.capacidadeKg}} kg</td>
                     <td class="col-status">
                         <span class="status-badge" [ngClass]="getStatusClass(c.status)">
                             {{c.status}}
                         </span>
                     </td>
                     <td class="col-tipo">
-                        {{ getTiposTexto(c.tiposResiduo) }}
+                        {{ getTiposTexto(c.tiposResiduoIds) }}
                     </td>
                     <td class="col-acao"><button (click)="abrirModalEditar(c)" class="btn-editar">Editar</button></td>
                 </tr>
