--- a/front/src/app/components/novo-ponto/novo-ponto.component.html
+++ b/front/src/app/components/novo-ponto/novo-ponto.component.html
@@ -40,6 +40,12 @@
                 </div>
             </div>
             <div class="row">
+                <div class="form-group">
+                    <label>Estimativa de quantidade por coleta:*</label>
+                    <input type="text" formControlName="quantidadeResiduosKg" placeholder="00">
+                </div>
+            </div>
+            <div class="row">
                 <label>SERVIÇOS ADICIONAIS:</label>
                 <div class="box-check" formArrayName="tiposResiduoIds" *ngIf="form.get('tiposResiduoIds')">
                     <div *ngFor="let residuo of residuosDisponivel; let i = index">
