--- a/front/src/app/pages/conexao/conexao.page.html
+++ b/front/src/app/pages/conexao/conexao.page.html
@@ -22,8 +22,8 @@
                 </tr>
                 <tr *ngFor="let r of listaRuas; let i = index">
                     <td class="col-pos">{{i + 1}}</td>
-                    <td class="col-bairro-origem">{{getBairroNome(r.origemId)}}</td>
-                    <td class="col-bairro-destino">{{getBairroNome(r.destinoId)}}</td>
+                    <td class="col-bairro-origem">{{r.origem.nome}}</td>
+                    <td class="col-bairro-destino">{{r.destino.nome}}</td>
                     <td class="col-distancia">{{r.distanciaKm}} km</td>
                     <td class="col-acao"><button (click)="abrirModalEditar(r)" class="btn-editar">Editar</button></td>
                 </tr>
