--- a/front/src/app/pages/caminhao/caminhao.page.html
+++ b/front/src/app/pages/caminhao/caminhao.page.html
@@ -33,7 +33,7 @@
                         </span>
                     </td>
                     <td class="col-tipo">
-                        {{ getTiposTexto(c.tiposResiduoIds) }}
+                        {{ getTiposTexto(c.tiposResiduos) }}
                     </td>
                     <td class="col-acao"><button (click)="abrirModalEditar(c)" class="btn-editar">Editar</button></td>
                 </tr>
