--- a/front/src/app/pages/rota/rota.page.html
+++ b/front/src/app/pages/rota/rota.page.html
@@ -30,7 +30,7 @@
                     <td class="col-caminhao">{{r.caminhao.placa}}</td>
                     <td class="col-distancia">{{r.distanciaTotal}}</td>
                     <td class="col-peso">{{r.pesoTotal}}</td>
-                    <td class="col-residuo">{{r.tipoResiduo.nome}}</td>
+                    <td class="col-residuo">{{r.tipoResiduo}}</td>
                     <td class="col-acao"><button (click)="abrirModalEditar(r)" class="btn-editar">Editar</button></td>
                 </tr>
             </tbody>
