--- a/front/src/app/components/novo-caminhao/novo-caminhao.component.html
+++ b/front/src/app/components/novo-caminhao/novo-caminhao.component.html
@@ -30,13 +30,19 @@
             </div>
             <div class="row">
                 <label>SERVIÇOS ADICIONAIS:</label>
-                <div class="box-check" formArrayName="tiposResiduoIds" *ngIf="form.get('tiposResiduoIds')">
-                    <div *ngFor="let residuo of residuosDisponivel; let i = index">
+
+                <div *ngIf="form.get('tiposResiduos') as tipos" 
+                    class="box-check" 
+                    [formGroup]="form"
+                    formArrayName="tiposResiduos">
+
+                    <div *ngFor="let residuo of tiposResiduosEnum; let i = index">
                         <label>
                             <input type="checkbox" [formControlName]="i">
                             {{ residuo }}
                         </label>
                     </div>
+
                 </div>
             </div>
             <div class="actions">
