--- a/front/src/app/pages/home/home.page.html
+++ b/front/src/app/pages/home/home.page.html
@@ -28,10 +28,11 @@
             <img class="card-icon"src="assets/icon-caminhao.png" alt="" srcset="">
             <a>Caminhão</a>
         </div>
+        <!--
         <div class="menu-card" [routerLink]="['/']">
             <img class="card-icon"src="assets/icon-config.png" alt="" srcset="">
             <a>Configuração</a>
-        </div>
+        </div>-->
     </div>
 </main>
 <app-footer/>
