--- a/front/src/app/components/box-bairro/box-bairro.component.html
+++ b/front/src/app/components/box-bairro/box-bairro.component.html
@@ -26,7 +26,7 @@
                 <span>{{ponto.telefone}}</span>
             </div>
             <button class="btn-editar" (click)="abrirModalEditarPonto(ponto)">Editar</button>
-            <button class="btn-excluir">Excluir</button>
+            <!-- <button class="btn-excluir">Excluir</button> -->
         </div>
     </div>
 </div>
